# thehomie-framework

./: .dockerignore  .gitignore  .graphifyignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FRAMEWORK.md  INSTALL.md  LANGFUSE-PROOF.md  LICENSE  README.md  WORKFLOW.md  build_v2.py  docker-compose.yml  generate_diagram.py  install.ps1  install.sh  smokemoto-icon.html
.claude/scripts/: .env.example  cli_entry.py  cognitive_loop_test_harness.py  concept_drafter.py  config.py  cron_entrypoint.sh  dashboard_api.py  dashboard_bot_lifecycle.py  dashboard_db.py  db.py  embeddings.py  entity_extractor.py  finance_ingest.py  gateway.py  heartbeat.py  hermes_scout.py  living_memory.py  memory_dream.py  memory_flush.py  memory_index.py  memory_reflect.py  memory_search.py  memory_weekly.py  notifications.py  pdf_to_markdown.py  phase4_ddl.sql  pyproject.toml  repository_config.py  repository_memory.py  run_monthly_finance.bat  run_monthly_finance.sh  run_reflect.sh  run_service.bat  run_weekly.bat  run_weekly.sh  seed_self_model.py  service.py  setup_auth.py  setup_bot_scheduler.ps1  setup_reflect_scheduler.ps1  (+13 more)
.claude/scripts/cabinet/: __init__.py  meeting_channel.py  text_orchestrator.py  text_router.py  title.py  tool_policy.py
.claude/scripts/design/: THIRD-PARTY-NOTICES.md  __init__.py  artifacts.py  brief.py  directions.py  systems.py
.claude/scripts/evolve/: __init__.py  compare.py  config_override.py  golden_queries.json  goldens.py  io.py  models.py  regression.py  regression_queries.json  replay.py  replay_tracing.py  statistics.py  veto.py  veto_rules.schema.json
.claude/scripts/integrations/: __init__.py  analytics_api.py  asana_api.py  cabinet_api.py  calendar_api.py  circle_api.py  docs_api.py  drive_api.py  email_cleanup.py  email_sanitizer.py  email_triage.py  gmail.py  outlook.py  personal_gmail.py  registry.py  search_console_api.py  sheets_api.py  slack_api.py  social_media.py
.claude/scripts/orchestration/: CONTRACT.md  __init__.py  api.py  contract.py  convoy_service.py  db.py  executor.py  live_safety.py  mailbox_service.py  models.py  observability.py  run_api.py  team_memory.py  team_room.py  team_service.py
.claude/scripts/personas/: __init__.py  atomic.py  clone.py  lifecycle.py  migrate.py  services.py  wrappers.py
.claude/scripts/runtime/: __init__.py  auth_profiles.py  base.py  bootstrap.py  capabilities.py  claude_sdk.py  errors.py  framework_registry.py  gemini_cli.py  health.py  lane_router.py  langfuse_setup.py  openai_codex.py  openai_compatible.py  profiles.py  prompt_builder.py  registry.py  routing.py  selection.py  toolsets.py  (+1 more)
(+454 files in other folders)
